--- a/practice-even-harder.html
+++ b/practice-even-harder.html
@@ -2,75 +2,106 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Web design playground</title>
+  <title>TodoList</title>
   <style>
-    #container {
-      margin: 20px auto;
-      width: 70%;
+    body {
+      font-family: Helvetica, Arial, sans-serif;
+      font-size: 18px;
     }
+
+    .container {
+      margin: 20px auto;
+      width: 500px;
+      border: 1px solid #e6e6e6;
+      border-radius: 3px;
+    }
+
     h1 {
-      font: bold 25px helvetica,arial,sans-serif;
       text-align: center;
     }
-    h2 {
-      font: bold 20px helvetica,arial,sans-serif;
+
+    form {
+      padding: 0 0 20px;
     }
-    #canvas {
-      border: 1px dashed #000;
+
+    input#new-todo {
+      display: block;
+      width: 478px;
+      border-radius: 3px;
+      border: 1px solid #e6e6e6;
       padding: 10px;
-      font: 16px/18px "times new roman",times,serif;
+      font-size: 18px;
     }
-    #controls {
-      display: -webkit-flex;
-      display: flex;
-    }
-    .control {
-      width: 33%;
-    }
-    .control ul {
+
+    ul#todolist {
       list-style: none;
+      margin: 0;
       padding: 0;
+    }
+
+    ul#todolist li {
+      padding: 5px;
+      border: 1px solid #e6e6e6;
+      border-radius: 3px;
+    }
+
+    ul#todolist li:hover {
+      background-color: #e6e6e6;
+    }
+
+    ul#todolist .todo.completed label {
+      text-decoration: line-through;
+      color: #999;
+    }
+
+    .footer {
+      margin-top: 10px;
+      background: #323232;
+      color: #e6e6e6;
+      padding: 5px;
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px;
+    }
+
+    .footer a:link,
+    .footer a:hover,
+    .footer a:visited {
+      color: #e6e6e6;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <div id="container">
-    <h1>Color and font playground</h1>
+  <div class="container">
+    <h1>TodoList</h1>
 
     <form>
-    <div id="controls">
-      <div class="control">
-        <h2>Font</h2>
-        <ul>
-          <li><label><input type="radio" name="fontname" value="arial"> Arial</label></li>
-          <li><label><input type="radio" name="fontname" value="courier"> Courier</label></li>
-          <li><label><input type="radio" name="fontname" value="georgia"> Georgia</label></li>
-          <li><label><input type="radio" name="fontname" value="times" checked> Times New Roman</label></li>
-          <li><label><input type="radio" name="fontname" value="verdana"> Verdana</label></li>
-        </ul>
-      </div>
-      <div class="control">
-        <h2>Color</h2>
-        <p>Text: <input id="textcolor" type="text" name="textcolor" value="#000" size="7"></p>
-        <p>Background: <input id="bgcolor" type="text" name="bgcolor" value="#fff" size="7"></p>
-      </div>
-      <div class="control">
-        <h2>Spacing</h2>
-        <p>Text size: <input id="textsize" type="text" name="textsize" value="16" size="5"></p>
-        <p>Line height: <input id="lineheight" type="text" name="lineheight" value="18" size="5"></p>
-        <p>Padding: <input id="textpadding" type="text" name="textpadding" value="10" size="5"></p>
-
-      </div>
-    </div>
+      <input type="text" id="new-todo" placeholder="What needs to be done?">
     </form>
 
-    <div id="canvas">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <ul id="todolist">
+      <li class="todo">
+        <input id="todo-1" type="checkbox">
+        <label for="todo-1">Sweep the floor</label>
+      </li>
+      <li class="todo completed">
+        <input id="todo-2" type="checkbox" checked="checked">
+        <label for="todo-2">Dust the vases</label>
+      </li>
+    </ul>
+    <div class="footer">
+      Todo: <span id="todo-count">1</span> •
+      Done: <span id="completed-count">0</span> •
+      Total: <span id="total-count">1</span>
     </div>
-
   </div>
-<script>
-// JavaScript goes here.
-</script>
+
+  <script>
+  	// JavaScript here...
+  </script>
 </body>
 </html>
