--- a/practice-even-harder.html
+++ b/practice-even-harder.html
@@ -74,7 +74,8 @@
       text-decoration: underline;
     }
   </style>
-</head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+</>
 <body>
   <div class="container">
     <h1>TodoList</h1>
